# albion.rest.api

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DEPLOY.md  README.md  deploy.nix  dev-config.toml  flake.nix  keys.nix  os.nix  prep.sh  rust.nix  services.nix
.github/workflows/: cd.yaml  ci.yaml
config/: dev.toml  rest-api.toml
docs/: book.toml  latency-investigation-2026-03-31.md
docs/src/: SUMMARY.md  authentication.md  errors.md  getting-started.md  introduction.md  orders.md  registry.md  swap-flow.md  tokens.md  trades.md
infra/: .terraform.lock.hcl  default.nix  main.tf  secrets.nix  terraform.tfstate.age  terraform.tfvars.age  terraform.tfvars.example  variables.tf
migrations/: 20260220000000_add_admin_and_settings.sql
scripts/: benchmark_orders_token.sh  summarize_orders_token_bench.py
src/: auth.rs  cache.rs  catchers.rs  cli.rs  config.rs  direct_trades.rs  error.rs  main.rs  sync.rs  telemetry.rs  test_helpers.rs
src/db/: mod.rs  settings.rs
src/fairings/: mod.rs  request_logger.rs  usage_logger.rs
src/raindex/: config.rs  mod.rs
src/routes/: admin.rs  mint.rs  mod.rs  orders.rs  registry.rs  schemas.rs  swap.rs  tests.rs  tokens.rs  trades.rs
src/routes/claims/: crypto.rs  csv.rs  hypersync.rs  merkle.rs  mod.rs  sort.rs  subgraph.rs  types.rs
src/routes/metadata/: decode.rs  mod.rs  subgraph.rs
src/routes/order/: cancel.rs  deploy_dca.rs  deploy_solver.rs  get_order.rs  mod.rs
src/routes/orders/: get_by_owner.rs  get_by_token.rs  get_by_tx.rs  mod.rs
src/routes/schemas/: cbor.rs  mod.rs  subgraph.rs
src/routes/swap/: calldata.rs  mod.rs  quote.rs
src/types/: common.rs  health.rs  mint.rs  mod.rs  order.rs  orders.rs  schemas.rs  swap.rs  trades.rs
