[package]
name = "albion_rest_api"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable when path deps (rain_orderbook_*, rain_math_float) are uncommented below
orderbook = []

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
utoipa = { version = "5", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9", features = ["rocket"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "=1.0.9", default-features = false, features = ["std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.58", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
rain-metadata = { path = "lib/rain.orderbook/lib/rain.interpreter/lib/rain.metadata/crates/cli", default-features = false }
serde_bytes = "0.11"
serde_cbor = "0.11"
# Path deps (uncomment when lib/ is present):
# rain_orderbook_js_api = { path = "lib/rain.orderbook/crates/js_api", default-features = false }
# rain_orderbook_common = { path = "lib/rain.orderbook/crates/common", default-features = false }
# rain_orderbook_bindings = { path = "lib/rain.orderbook/crates/bindings", default-features = false }
# rain-math-float = { path = "lib/rain.orderbook/lib/rain.interpreter/lib/rain.interpreter.interface/lib/rain.math.float/crates/float" }
# wasm-bindgen = "=0.2.100"

[dev-dependencies]
tracing-test = "0.2"
